--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,17 @@
     package="com.example.trailmix">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- Allows for file reading -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <!-- Allows for file reading -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <!-- app icon -->
     <application
         android:allowBackup="true"
@@ -49,7 +47,6 @@
         <activity android:name=".FinishedActivity" />
         <activity android:name=".TimeActivity" />
         <activity android:name=".LoadingActivity" />
-       <!-- <activity android:name=".LocationActivity" />-->
     </application>
 
 </manifest>
