--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,26 +3,29 @@
     package="com.example.trailmix">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Allows for file reading -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
     <!-- app icon -->
-    <!--Icon made with Logo made using LogoMakr at LogoMakr.com, https://logomakr.com/9Badtn-->
+    <!-- Icon made with Logo made using LogoMakr at LogoMakr.com, https://logomakr.com/9Badtn -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,9 +47,16 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".FinishedActivity" />
-        <activity android:name=".TimeActivity" />
-        <activity android:name=".LoadingActivity" />
+        <activity
+            android:name=".FinishedActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TimeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LoadingActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".LocationActivity"></activity>
     </application>
 
 </manifest>
